--- a/README
+++ b/README
@@ -1,3 +1,11 @@
 
 Evaluations comparing pthreads and deterministic Linux
 
+Programs
+~~~~~~~~
+
+* LU decomposition using discontiguous blocks (16x16, 32x32, 64x64, 128x128).
+* Matrix mutlitplication with varying block sizes.
+* md5 hash string searcher (e.g. to crack passwords).
+* quicksort.
+
